source/blender/asset_system/intern/asset_library_all.cc
@@ -12,6 +12,10 @@
 
 #include "asset_library_all.hh"
 
+#include "CLG_log.h"
+
+static CLG_LogRef LOG = {"asset_system.all_asset_library"};
+
 namespace blender::asset_system {
 
 AllAssetLibrary::AllAssetLibrary() : AssetLibrary(ASSET_LIBRARY_ALL) {}
@@ -28,9 +32,30 @@ void AllAssetLibrary::rebuild_catalogs_from_nested(const bool reload_nested_cata
         if (reload_nested_catalogs) {
           nested.catalog_service->reload_catalogs();
         }
-        new_catalog_service->add_from_existing(*nested.catalog_service);
+
+        new_catalog_service->add_from_existing(
+            *nested.catalog_service,
+            /*on_duplicate_items=*/[](const AssetCatalog &existing,
+                                      const AssetCatalog &to_be_ignored) {
+              if (existing.path == to_be_ignored.path) {
+                CLOG_INFO(&LOG,
+                          2,
+                          "multiple definitions of catalog %s (path: %s), ignoring duplicate",
+                          existing.catalog_id.str().c_str(),
+                          existing.path.c_str());
+              }
+              else {
+                CLOG_ERROR(&LOG,
+                           "multiple definitions of catalog %s with differing paths (%s vs. %s), "
+                           "ignoring second one",
+                           existing.catalog_id.str().c_str(),
+                           existing.path.c_str(),
+                           to_be_ignored.path.c_str());
+              }
+            });
       },
       false);
+
   new_catalog_service->rebuild_tree();
   this->catalog_service = std::move(new_catalog_service);
 }
